Specify node version

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "uuid": "b74a96e8-48e8-450a-a258-9b1ffd5a6823"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
+    "node": "14.18.2",
     "npm": "^6.0.0"
   },
   "license": "MIT"
